--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
 
-    <title>Befly Sound</title>
+    <title>BeflyAudio</title>
   </head>
   <body>
+    <!-- -->
+    <!--The welcome card-->
     <div class="column menu-content ">
       <div class="card-bg">
         <img src="menu_card.png" class="img-fluid center-block">
@@ -23,9 +25,9 @@
           <div class="col-lg-5 col-sm-12 menu-wrapper">
             <div class="menu menu">
               <h2><a class="link text-shadow" href="#projects"><b>PROJECTS</b></a></h2>
-              <h2><a class="link text-shadow" href="#projects"><b>ABOUT</b></a></h2>
+              <h2 class="link-dead"><b>ABOUT</b></h2>
               <h2><a class="link text-shadow" href="#projects"><b>CONTACT</b></a></h2>
-              <h2><a class="link text-shadow" href="#projects"><b>BLOG</b></a></h2>
+              <h2 class="link-dead"><b>BLOG</b></h2>
             </div>
           </div>
         </div>
@@ -52,7 +54,7 @@
     </div>
 
     
-
+<!-- The video section -->
     <div class="container demo-section">
       <div class="embed-responsive embed-responsive-16by9">
         <iframe width="560" height="315" src="https://www.youtube.com/embed/OEq7JsiIvqk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
@@ -61,6 +63,8 @@
 
     <div class="separator">.</div>
 
+    <!-- Skill cards-->
+    <!--
     <div class="container row mx-auto">
       <div class="col-lg-3 perks">
         <div class="card shadow perks-cards" style="">
@@ -99,13 +103,16 @@
         </div>
       </div>
     </div>
-
+    
     <div class="separator">.</div>
+    -->
 
+    <!-- Title-->
     <div class="container">
       <h2 id="projects"><b>PROJECTS</b></h2>
     </div>
 
+    <!-- Container for main projects-->
     <div class="container">
       <div class="card project-card mb-3 shadow-sm">
         <div class="row no-gutters">
@@ -124,11 +131,13 @@
       </div>
     </div>
 
+    <!-- Title-->
     <div class="separator">.</div>
     <div class="container">
       <h2 class="text-shadow"><b>Gamejams and other fun</b></h2>
     </div>
 
+    <!-- Containter for gamejam stuff-->
     <div class="container">
       <div class="card project-card mb-3 shadow-sm">
         <div class="row no-gutters">
@@ -139,7 +148,9 @@
             <div class="card-body">
               <h2><b><a class="link text-shadow" href="1">237</a></b></h2>
               <h5 class="text-shadow"><b>237 is a Narrative-Psychological First Person Horror game based on Stanley Kubrick's imagining of The Shining.</b></h5>
-              <p class="">For this project i finally got to make an adaptive soundtrack using FMOD, and to use the oculus spatializer technology for truly 3D sound. The development was quite hectic, and it got covered by several <a href="https://youtu.be/_lRTO-5MbXY"><b>youtube</b></a> chanells. <span class="text-gold text-shadow"><b>One of the most fun projects i ever done</b></span>.</p>
+              <p class="">For this project i finally got to make an adaptive soundtrack using FMOD, and to use the oculus spatializer technology for truly 3D sound.<span class="text-gold text-shadow"><b>One of the most fun projects i ever done</b></span>.</p>
+              <br>
+              <br>
               <a href="#" class="project-link" role="button" aria-pressed="true"><b>OST</b></a> <a href="#" class="project-link" role="button" aria-pressed="true"><b>Game</b></a>
             </div>
           </div>
@@ -168,6 +179,8 @@
       </div>
     </div>
 
+
+    <!-- random linky stuff for Bootstrap-->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
